# Spherical-cow

./: Aklima_Matthew_Asif.txt  do_full_backup.sh  function_1.py  hw1.txt
Monte_Carlo_Project/: pyproject.toml  setup.py
Monte_Carlo_Project/my_module/: MonteCarlo.py  ParticleMotion.py  QuantumSimulator.py  main.py
course_work/831_bash_script/: id2  id2.pub  my_script.sh
