[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Project2_Package"
version = "0.0.1"
authors = [
  { name="Matthew and Wally"},
]
description = "A Monte-carlo simulation of a particle in a box"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Adefisoye-Ayomide/Project2_Package.git"